# vex-tools

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  NAMING.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
vext/: .gitignore  .gitlab-ci.yml  .tool-versions  ABI-FFI-README.md  AI.a2ml  CHANGELOG.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT-AND-PUSH.sh  Cargo.toml  Containerfile  DOCUMENTATION_INDEX.md  FEATURES.md  INSTALLATION_GUIDE.md  Justfile  MAINTAINERS.md  Mustfile  PROJECT_OVERVIEW.md  README.adoc  REPO-CONTENTS.md  RESEARCH_SUMMARY.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.md  RSR_OUTLINE.adoc  SECURITY.md  TECHNOLOGY_STACK.md  USAGE_GUIDE.md  config.ncl
vext/.claude/: CLAUDE.md
vext/.clusterfuzzlite/: Containerfile  build.sh  project.yaml
vext/.github/: dependabot.yml
vext/.migration/: PYTHON_TO_RUST_RESCRIPT.md
vext/.trust/: trust-manifest.sha256
vext/.well-known/: ai.txt  humans.txt  security.txt
vext/aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
vext/benches/: vext_bench.rs
vext/docs/: CITATIONS.adoc  conference-materials.md
vext/ffi/zig/: build.zig
vext/fuzz/: Cargo.toml
vext/governance/: PROJECT_GOVERNANCE.md
vext/locales/: en-US.ftl  es-ES.ftl  fr-FR.ftl
vext/man/: vext-send.1  vextd.1
vext/papers/: tpcf-graduated-trust.md
vext/vext-core/: Cargo.toml
vext/vext-tools/: deno.json  rescript.json
(+290 files in other folders)
